--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
-    "expo": "^49.0.6",
+    "expo": "^49.0.21",
     "expo-status-bar": "~1.6.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
@@ -19,6 +21,7 @@
     "react-native-gesture-handler": "^2.14.0",
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.4",
+    "react-native-screens": "~3.22.0",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
