--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
@@ -19,10 +20,12 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-collapsible": "^1.6.1",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "~3.22.0",
+    "react-native-toast-message": "^2.1.7",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
