--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "react-native": "0.72.3",
     "react-native-collapsible": "^1.6.1",
     "react-native-gesture-handler": "^2.14.0",
+    "react-native-image-slider-box": "^2.0.7",
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "~3.22.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-toast-message": "^2.1.7",
     "tailwindcss": "^3.3.2"
   },
